@@ -28,6 +28,7 @@
 * Fixed LXS parsing of point light source position
 * DLSC now automatically estimated the best radius if lightstrategy.entry.radius is set to 0.0
 * New improved Random/Sobol sampler adaptive code
+* LXS parser now supports halttime and haltspp film halt conditions
 
 ### Fixed Bugs
 
